--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,8 @@
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
+    "react-hook-form": "^7.31.2",
+    "solid-app-router": "^0.3.3",
     "solid-js": "^1.3.13"
   }
 }
